--- a/index.html
+++ b/index.html
@@ -1,55 +1,73 @@
 <!DOCTYPE html>
 <html>
+<head>
+    <meta charset="utf-8">
+    <title>VueJS: Componentes</title>
+    <meta name="author" content="">
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- TODO: Cargar CSS Bootstrap (no es necesario el JS) -->
+</head>
 
-    <head>
-        <meta charset="utf-8">
-        <title>VueJS: Componentes</title>
-        <meta name="author" content="">
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <!-- TODO: Cargar CSS Bootstrap (no es necesario el JS) -->
-    </head>
+<body>
+    <h1 id="autor">Autor: Alina Maltceva</h1>
+    <div id="app">
+        <div>
+            <div class="jumbotron" style="background-color: #E8ECEE;">
+                <h1 id="title" class="display-5">{{ col.collection.title }}</h1>
+            </div>
+        </div>  
+        <div class="card-group">
+            <div class="card" :key="ind" v-for="(elem,ind) in col.collection.items" >
+                <item-data :elem="ind" v-if="!pelis.includes(ind)" v-bind:param="elem"></item-data>
+                <div is="edit-form" v-bind:param="elem" :elem="ind" v-else></div> 
+            </div>
+        </div>
+    </div>
+    
+    <!--
+        TODO: Aplicación VueJS. Ver archivo ./js/script.js
+        - Mostrar el título de la colección dentro de un componente Jumbotron de Bootstrap https://getbootstrap.com/docs/4.0/components/jumbotron/. En su interior habrá un <h1> con id "title" que mostrará el título de la colección
+        - Para cada item: (https://vuejs.org/v2/guide/index.html#Conditionals-and-Loops)
+        - Crear un componente item-data
+    -->
 
-    <body>
+    <!-- Plantilla para el componente edit-form -->
+    <script type="text/x-template" id="editForm">
+        <!--
+            TODO: Componente edit-form 
+        -->
+        <div class="card-body">
+            <div v-for="(e,iterador) in param.data">
+                <h5 class="card-text">{{e.prompt}}</h5>
+                <input v-if="iterador != 1" type="text" class="card-text" :value="e.value" :id="e.name+elem" v-model="e.value"/>
+                <textarea v-else :value="e.value" rows="4" cols="50" :id="e.name+elem" v-model="e.value"></textarea>
+            </div>
+            <br/>
+            <button  v-on:click="closeForm(elem)" class="btn btn-primary">Cerrar</button>
+        </div>
+    </script>
 
-        <h1 id="autor">Autor: Alina Maltceva</h1>
-
-        <!-- https://vuejs.org/v2/guide/index.html -->
-        <div id="app">
-            <!--
-                 TODO: Aplicación VueJS. Ver archivo ./js/script.js
-               - Mostrar el título de la colección dentro de un componente Jumbotron de Bootstrap https://getbootstrap.com/docs/4.0/components/jumbotron/. En su interior habrá un <h1> con id "title" que mostrará el título de la colección
-               - Para cada item: (https://vuejs.org/v2/guide/index.html#Conditionals-and-Loops)
-                 - Crear un componente item-data
-            -->
-
+    <!-- Plantilla para el componente item-data -->
+    <script type="text/x-template" id="itemData">        
+        <div class="card-body">
+            <dl>
+                <div v-for="e in param.data">
+                    <dt><h5 class="card-text">{{e.prompt}}</h5></dt>
+                    <dd><p class="card-text">{{e.value}}</p></dd>
+                </div>
+            </dl>
+            <a v-bind:href="param.href" class="btn btn-primary">Mostrar</a>
+            <button  v-on:click="toggleEditFormVisibility(elem)" class="btn btn-secondary">Editar</button>
         </div>
 
-
-
-        <!-- Plantilla para el componente edit-form -->
-        <script type="text/x-template" id="editForm">
-
-            <!--
-                 TODO: Componente edit-form
-            -->
-
-        </script>
-
-
-
-        <!-- Plantilla para el componente item-data -->
-        <script type="text/x-template" id="itemData">
-
-            <!--
-                 TODO: Componente item-data
-            -->
-
-        </script>
-
-
-        <!-- TODO: Cargar librería VueJS y archivo js/script.js -->
-
-    </body>
-
+        <!--
+            TODO: Componente item-data
+        -->
+    </script>
+    <!-- TODO: Cargar librería VueJS y archivo js/script.js -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
+    <script src="./js/script.js"></script>
+</body>
 </html>
